# TheStickening

./: Cargo.toml  Makefile  README.md
src/: app.rs  config.rs  eventloop.rs  gamepad.rs  main.rs  menu.rs  mouse.rs  setupapp.rs  setupinterface.rs  setuplinux.rs  setupwin.rs  smoothing.rs  tray.rs
