[package]
name = "thestickening"
version = "0.1.0"
edition = "2024"

[dependencies]
gilrs = { version = "0.11.1", features = ["serde-serialize"] }
tray-icon = "0.14"
winit = "0.30"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(unix)'.dependencies]
